2010-10-08  Raúl Mateos <raulofpandora@gmail.com>

	* operation/agentes/estado_monitores.php: Center status icon.

2010-10-08  Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_io.php: Added functions ascii_to_html and html_to_ascii. 
	Also use this functions to convert no printing chars in function safe_input 
	and to revert the conversion in function safe_output.
	* include/functions_db.php: Added function escape_string_sql, is a
	wrapper db indepenten function to do the same that function mysql_real_escape_string
	* index.php: Use function escape_string_sql with login parameters.

2010-10-08  Sergio Martin <sergio.martin@artica.es>

	* include/javascript/pandora.js
	include/functions_agents.php
	operation/agentes/ver_agente.php
	godmode/massive/massive_add_alerts.php
	godmode/massive/massive_delete_alerts.php: Improved the 
	addition/deletion of alerts in massive operations to 
	select not only the agents (the modules too) for pending
	task 3082862

2010-10-08  Sergio Martin <sergio.martin@artica.es>

	* include/functions_db.php: Fixed the function get_agentmodule_id
	to avoid the pending_delete modules

2010-10-08  Sergio Martin <sergio.martin@artica.es>

	*  godmode/agentes/module_manager_editor_common.php
	 godmode/agentes/module_manager_editor.php: Fixed SQL 
	 error when try to create a module called 0

2010-10-08  Junichi Satoh  <junichi@rworks.jp>

	* godmode/massive/massive_add_action_alerts.php,
	godmode/massive/massive_delete_action_alerts.php: Added simple and
	compound alerts selections.

	* include/functions_alerts.php: Added new function, get_alert_compounds().

2010-10-07  Sancho Lerena <slerena@artica.es>

        * godmode/alerts/alert_list.list.php: Another ugly warning fixed due 
        an undefined array. PLEASE dont use foreach on arrays non-checked !

	* godmode/agentes/configurar_agente.php: Added custom fields to the global
	edit/insert code. Not really used here, but for the future.
